# DroneDockingSim

./: .gitignore  README.md  Tip.txt  Tips.txt  mav.parm  run_ardupilot_gazebo.sh
Drones_With_Dockers/: Changelog_dronedocking.txt  Next_Instructions.txt
drone_models/DroneDockingCAD/: DockingMechanismBracketL.f3d  DockingMechanismBracketR.f3d  DroneBase.f3d  FemaleDrone.f3z  Male Connector.f3d
drone_models/DroneDockingSTL/: DockingMechanismBracketR.stl  MaleDrone.stl
drone_models/FreeCADModels/: FemaleDrone.20260501-201755.FCBak  FemaleDrone.20260504-211321.FCBak  FemaleDrone.20260710-214810.FCBak  FemaleDrone.20260712-231454.FCBak  FemaleDrone.20260719-115122.FCBak  FemaleDrone.20260722-205306.FCBak  FemaleDrone.FCStd  MaleDrone-Cone.3mf  MaleDrone-MaleConnectorArmConnector.3mf  MaleDrone-MaleConnectorBody.3mf  MaleDrone-MaleConnectorConnector.3mf  MaleDrone-MaleConnectorConnector.gcode.3mf  MaleDrone.20260419-213951.FCBak  MaleDrone.20260421-213715.FCBak  MaleDrone.20260423-151928.FCBak  MaleDrone.20260426-164554.FCBak  MaleDrone.20260427-204615.FCBak  MaleDrone.20260501-200241.FCBak  MaleDrone.20260505-201518.FCBak  MaleDrone.FCStd  (+5 more)
logs/: Changelog_dronedocking.txt
ros2_ws/src/drone_docking_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_docking_sim/launch/: bringup_two_drones.launch.py
ros2_ws/src/drone_docking_sim/models/iris_with_ardupilot_1/: model.config  model.sdf
ros2_ws/src/drone_docking_sim/models/iris_with_ardupilot_2/: model.config  model.sdf
ros2_ws/src/drone_docking_sim/worlds/: two_iris.sdf
scripts/: two_drone_align.py
(+36 files in other folders)
