<?xml version="1.0"?>
<package format="3">
    <name>drone_docking_sim</name>
    <version>0.0.1</version>
    <description>Two-drone ArduPilot + Gazebo Harmonic sim bringup</description>
    <maintainer email="sebgra518@gmail.com">sebgra518</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <!-- For ros2 launch -->
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <!-- Optional but commonly used -->
    <exec_depend>python3</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
